* 2014-06-02 - jan.bauerdick@open-xchange.com

 - Fix for bug 32874: Removed unsupported "file content" facet

* 2014-06-02 - thorben.betten@open-xchange.com

 - Fix for bug 32555: Keep other Content-Type parameters when fixing Apple Mailer messages
 - Fix for bug 32877: Proper field look-up for "attachment_name" field name

* 2014-05-28 - marc.arens@open-xchange.com

 - Fix for bug 32798:  Use optService and check for availability, log proper error on unavailability
 
* 2014-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 32796: Proper handling of special "*" query during task search
 - Fix for bug 32800: Respect index boundaries when adding SIEVE rules to a java.util.List
 - Fix for bug 32802: Ensure storage instance is initialized during start-up
 - Fix for bug 31539: Orderly signal an error if an identity check is encountered during crawler-based subscription of Google calendar

* 2014-05-28 - martin.schneider@open-xchange.com

 - Fix for bug 32784: Prepare file sizes for error messages to be human readable

* 2014-05-27 - thorben.betten@open-xchange.com

 - Fix for bug 32732: Orderly detect a duplicate lead request

* 2014-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 32708: Fixed forwarding of mails from Unified Mail
 - Fix for bug 32625: Keep subscription statuses when moving IMAP folders

* 2014-05-22 - thorben.betten@open-xchange.com

 - Fix for bug 32677: Do net set SMTP credentials if not explicitly set + several sanitizing operations to ensure SMTP authentication does still work
 - Fix for bug 32692: Ignore alternative XML part

* 2014-05-21 - thorben.betten@open-xchange.com

 - Fix for bug 32652: Do also consider pre-auth capabilities when checking for a secure connection
 - Fix for bug 32651: Do not overwrite settings fetched from config-cascade in JSON merge
 - Fix for bug 32409: Check retrieved document against passed folder identifier (if any)
 - Fix for bug 32226: Fixed regex used for look-up of referenced inline images
